--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 Django==1.10
-djangorestframework==3.6.2
 Pygments==2.2.0
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.25
+django-celery==3.2.1
+django-celery-with-redis==3.0
+djangorestframework==3.6.2
+kombu==3.0.37
+pytz==2017.2
+redis==2.10.5
+vine==1.1.3
+wsgiref==0.1.2
